--- a/.github/workflows/manual_test.yml
+++ b/.github/workflows/manual_test.yml
@@ -1,10 +1,3 @@
-# This workflow will triage pull requests and apply a label based on the
-# paths that are modified in the pull request.
-#
-# To use this workflow, you will need to set up a .github/labeler.yml
-# file with configuration.  For more information, see:
-# https://github.com/actions/labeler
-
 name: Manual Regression Test
 on: 
   workflow_dispatch:
@@ -64,33 +57,7 @@ on:
         - integrated
 jobs:
   job1:
-    name: Generate Documents
-    runs-on: [self-hosted, sqa-ds-hn-003]
-    permissions:
-      contents: read
-      pull-requests: write
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4.1.7
-      with:
-        ref: "${{ github.event.inputs.branch }}"
-    - name: Remove Libraries
-      run: rm -rf EFR32_ICE60730_Libraries
-    - name: Create directory for Libraries
-      run: mkdir EFR32_ICE60730_Libraries
-    - name: Generate Documents with Doxygen
-      run: doxygen qat.doxygen
-    - name: Upload Documents
-      uses: actions/upload-artifact@v4.3.4
-      with:
-        path: 
-          Doc/html/EFR32_ICE60730_Libraries/
-        warn: Output a warning but do not fail the action
-        retention-days: 90
-
-  job2:
-    if: (success() || failure()) && github.event.inputs.test_mg12 == 'true'
-    needs: [job1]
+    if: github.event.inputs.test_mg12 == 'true'
     name: GCC-MG12 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
     permissions:
@@ -156,9 +123,9 @@ jobs:
         warn: Output a warning but do not fail the action
         retention-days: 90
   
-  job3:
+  job2:
     if: (success() || failure()) && github.event.inputs.test_mg24 == 'true'
-    needs: [job1, job2]
+    needs: [job1]
     name: GCC-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
     permissions:
@@ -225,9 +192,9 @@ jobs:
         warn: Output a warning but do not fail the action
         retention-days: 90
   
-  job4:
+  job3:
     if: (success() || failure()) && github.event.inputs.test_mg12 == 'true'
-    needs: [job1, job2, job3]
+    needs: [job1, job2]
     name: IAR-MG12 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
     permissions:
@@ -294,9 +261,9 @@ jobs:
         warn: Output a warning but do not fail the action
         retention-days: 90
   
-  job5:
+  job4:
     if: (success() || failure()) && github.event.inputs.test_mg24 == 'true'
-    needs: [job1, job2, job3, job4]    
+    needs: [job1, job2, job3]    
     name: IAR-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
     permissions:
