--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,10 @@
-# This workflow will triage pull requests and apply a label based on the
-# paths that are modified in the pull request.
-#
-# To use this workflow, you will need to set up a .github/labeler.yml
-# file with configuration.  For more information, see:
-# https://github.com/actions/labeler
-
 name: Regression Test
 on: 
   pull_request:
       types: [opened, edited, review_requested, synchronize, review_request_removed, reopened]
+      branches:
+        - main
+        - iec_efr32
 
 env:
   SECURITY: APP_SECURE=false
@@ -75,7 +71,7 @@ jobs:
         retention-days: 90
   
   job2:
-    if: (success() || failure()) && github.event.inputs.test_mg24 == 'true'
+    if: (always())
     needs: [job1]
     name: GCC-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
@@ -137,7 +133,7 @@ jobs:
         retention-days: 90
   
   job3:
-    if: (success() || failure()) && github.event.inputs.test_mg12 == 'true'
+    if: (always())
     needs: [job1, job2]
     name: IAR-MG12 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
@@ -201,7 +197,7 @@ jobs:
         retention-days: 90
   
   job4:
-    if: (success() || failure()) && github.event.inputs.test_mg24 == 'true'
+    if: (always())
     needs: [job1, job2, job3]    
     name: IAR-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
