Update and rename test.yml to auto_test.yml

--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -1,4 +1,4 @@
-name: Regression Test
+name: Automation Trigger
 on: 
   pull_request:
       types: [opened, edited, review_requested, synchronize, review_request_removed, reopened]
