--- a/.github/workflows/generate_documents.yml
+++ b/.github/workflows/generate_documents.yml
@@ -1,32 +1,28 @@
-# This is a basic workflow that is manually triggered
-
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
-on:
+name: Automation Trigger
+on: 
+  pull_request:
+      types: [opened, edited, review_requested, synchronize, review_request_removed, reopened]
+      branches:
+        - main
   workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-        # The data type of the input
-        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  job1:
+    name: GCC-MG12 regression test
+    runs-on: ubuntu-20.04
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+    - name: Checkout
+      uses: actions/checkout@v4.1.7
+    - name: Check ubuntu version
+      run: 
+        uname -r
+        ifconfig
+  
+
+    
+  
+  
+          
