--- a/.github/workflows/generate_documents.yml
+++ b/.github/workflows/generate_documents.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4.1.7
     - name: Check ubuntu version
-      run: 
+      run: |
         uname -r
         ifconfig
   
