--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -93,7 +93,7 @@ jobs:
           # entered, it will be relative to the location where doxygen was started. If
           # left blank the current directory will be used.
           
-          OUTPUT_DIRECTORY       = $(PWD)/Doc/html/EFR32_ICE60730_Libraries/
+          OUTPUT_DIRECTORY       = $(PWD)/Doc/html/EFR32_ICE60730_Libraries
           
           # If the CREATE_SUBDIRS tag is set to YES then doxygen will create 4096 sub-
           # directories (in 2 levels) under the output directory of each output format and
@@ -1005,7 +1005,7 @@ jobs:
           # that contain images that are to be included in the documentation (see the
           # \image command).
           
-          IMAGE_PATH             = "Doc/images/"
+          IMAGE_PATH             = "Doc/images"
           
           # The INPUT_FILTER tag can be used to specify a program that doxygen should
           # invoke to filter for each input file. Doxygen will invoke the filter program
@@ -1219,7 +1219,7 @@ jobs:
           # The default directory is: html.
           # This tag requires that the tag GENERATE_HTML is set to YES.
           
-          HTML_OUTPUT            = $(PWD)/Doc/html/EFR32_ICE60730_Libraries/
+          HTML_OUTPUT            = $(PWD)/Doc/html/EFR32_ICE60730_Libraries
           $(YOUR_DOT_PATH)
           # The HTML_FILE_EXTENSION tag can be used to specify the file extension for each
           # generated HTML page (for example: .htm, .php, .asp).
