--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -259,7 +259,7 @@ jobs:
         write-mode: overwrite
     - name: Generate Firmwares
       run: |
-        sudo -R chmod 777 .
+        chmod -R 777 .
         ./generate.sh $COMMAND $COMPONENT $PLATFORM $COMPILER $SECURITY
     - name: Zip Release
       # You may pin to the exact commit or the version.
