--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -13,7 +13,7 @@ env:
 jobs:
   job1:
     name: GCC-MG12 regression test
-    runs-on: [self-hosted, sqa-ds-hn-006]
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       pull-requests: write
@@ -58,7 +58,7 @@ jobs:
     if: (always())
     needs: [job1]
     name: GCC-MG24 regression test
-    runs-on: [self-hosted, sqa-ds-hn-006]
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       pull-requests: write
@@ -102,7 +102,7 @@ jobs:
     if: (always())
     needs: [job1, job2]
     name: IAR-MG12 regression test
-    runs-on: [self-hosted, sqa-ds-hn-006]
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       pull-requests: write
@@ -147,7 +147,7 @@ jobs:
     if: (always())
     needs: [job1, job2, job3]    
     name: IAR-MG24 regression test
-    runs-on: [self-hosted, sqa-ds-hn-006]
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       pull-requests: write
