--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -1,4 +1,4 @@
-name: Automation Trigger
+name: Generate Firmware
 on: 
   pull_request:
       types: [opened, edited, review_requested, synchronize, review_request_removed, reopened]
