--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -26,19 +26,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.7
-    - name: Download File Action
-      # You may pin to the exact commit or the version.
-      # uses: Minionguyjpro/Download-File-Action@cb86d3ecd4ed8bc49f63cf4b33d957c50fcb5ba0
-      uses: Minionguyjpro/Download-File-Action@v1
-      with:
-        # URL to download file from
-        url: https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-aarch64-linux.tar.bz2?rev=b748c39178c043b4915b04645d7774d8&hash=9E173D105DC6E0D452EB3A813BF28AAB
-        # Path to store output file
-        path: docker/
           
     - name: Prepare environment
       run: |
         cd docker
+        wget https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-aarch64-linux.tar.bz2?rev=b748c39178c043b4915b04645d7774d8&hash=9E173D105DC6E0D452EB3A813BF28AAB
         tar xjf gcc-arm-none-eabi-10.3-2021.10-aarch64-linux.tar.bz2
         git clone ssh://git@stash.silabs.com/toolchain_external/iar_bxarm_9204_linux_jenkins.git
         ls -la
