--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -33,7 +33,7 @@ jobs:
       uses: valitydev/action-download-file@v1.0.6
       with:
         # URL to file
-        url: https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-aarch64-linux.tar.bz2
+        url: https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
         # Target path
         target-path: docker/
           
@@ -41,7 +41,7 @@ jobs:
       run: |
         cd docker
         ls -la
-        tar xjf gcc-arm-none-eabi-10.3-2021.10-aarch64-linux.tar.bz2
+        tar xjf gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
         ls -la
         
     - name: Generate Firmware
