--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -53,7 +53,7 @@ jobs:
         chmod -R 777 . 
         cd Test/
         ls -la
-        export TOOL_DIRS=docker/gcc-arm-none-eabi-10.3-2021.10/bin
+        export TOOL_DIRS=${pwd}/docker/gcc-arm-none-eabi-10.3-2021.10/bin
         ./generate_fw.sh $COMMAND $COMPONENT $PLATFORM $COMPILER $SECURITY
 
     - name: Zip Release
