Create source code unit tests and write bash scripts to support automatic running of test cases

--- a/test/unit_test/CMakeLists.txt
+++ b/test/unit_test/CMakeLists.txt
@@ -1,69 +1,69 @@
+# unit test info
 set(UNIT_TEST_INFO "unit_test_info")
-set(UNIT_TEST_COMPONENT "module_demo")
+set(UNIT_TEST_CLEAN "unit_test_clean")
+
+# Support calculate CRC
+option(ENABLE_CAL_CRC_32 "Enable calculate crc 32" OFF)
+option(ENABLE_CRC_USE_SW "Enable using software calculate CRC" OFF)
+option(ENABLE_SW_CRC_TABLE "Enable software calculate CRC using table CRC" OFF)
+set(OPTION_SUPPORT_TEST_IMC_MODULE "ENABLE_CAL_CRC_32 ENABLE_CRC_USE_SW ENABLE_SW_CRC_TABLE")
+
+# Set address start calculate crc
+if(DEFINED ENV{START_ADDR_FLASH})
+  set(START_ADDR_FLASH "$ENV{START_ADDR_FLASH}")
+else()
+set(START_ADDR_FLASH "0x00000000")
+endif()
+
+message("-- Options to support running tests of invariable memory modules: ${OPTION_SUPPORT_TEST_IMC_MODULE}")
+
+if(ENABLE_CAL_CRC_32)
+  message("-- Support crc calculation for invariable memory modules: CRC-32")
+else()
+  message("-- Support crc calculation for invariable memory modules: CRC-16")
+endif()
+
+if(ENABLE_CRC_USE_SW)
+  message("-- Enable using software to calculate CRC")
+  if(ENABLE_SW_CRC_TABLE)
+    message("-- Enable software using CRC pre-defined table to calculate CRC")
+  else() # ENABLE_SW_CRC_TABLE
+    message("-- Disable software using CRC pre-defined table to calculate CRC")
+  endif() # ENABLE_SW_CRC_TABLE
+else() # ENABLE_CRC_USE_SW
+  message("-- Enable using harware GPCRC to calculate CRC")
+endif() # ENABLE_CRC_USE_SW
+
+message("-- Start address calculate crc value of flash: ${START_ADDR_FLASH}")
 
 add_custom_target(${UNIT_TEST_INFO}
-                  COMMAND echo "Components list: ${UNIT_TEST_COMPONENT}" || (exit 0)
+                  COMMAND echo "Components list: unit_test_iec60730_post "
+                  " unit_test_iec60730_bist "
+                  " unit_test_iec60730_program_counter "
+                  " unit_test_iec60730_safety_check "
+                  " unit_test_iec60730_irq "
+                  " unit_test_iec60730_system_clock "
+                  " unit_test_iec60730_watchdog "
+                  " unit_test_iec60730_cpu_registers "
+                  " unit_test_iec60730_variable_memory "
+                  " unit_test_iec60730_invariable_memory\ "
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
 )
 
-
-set(UNIT_TEST_MODULE_DEMO "unit_test_iec60730_module_demo")
-set(UNIT_TEST_MODULE_DEMO_BUILD_DIR "build/moule_demo")
-set(UNIT_TEST_SOURCES
-    "./src/main.c"
-    "./src/app.c"
-    "./src/test_common.c"
-    "./src/test_iec60730_module_demo.c"
-)
-set(UNIT_TEST_INCLUDES "./inc"
-   ${UNITY_HEADER})
-
-set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Build)
-add_executable(${UNIT_TEST_MODULE_DEMO} ${UNIT_TEST_SOURCES})
-target_include_directories(${UNIT_TEST_MODULE_DEMO} PUBLIC ${UNIT_TEST_INCLUDES})
-
-target_link_libraries(${UNIT_TEST_MODULE_DEMO} PUBLIC unity slc_iostream_usart )
-
-# Create .bin, .hex and .s37 artifacts after building the project
-add_custom_command(TARGET ${UNIT_TEST_MODULE_DEMO}
-    POST_BUILD
-    COMMAND ${CMAKE_OBJCOPY} -O srec "$<TARGET_FILE:${UNIT_TEST_MODULE_DEMO}>" "$<TARGET_FILE_DIR:${UNIT_TEST_MODULE_DEMO}>/$<TARGET_FILE_BASE_NAME:${UNIT_TEST_MODULE_DEMO}>.s37"
-    COMMAND ${CMAKE_OBJCOPY} -O ihex "$<TARGET_FILE:${UNIT_TEST_MODULE_DEMO}>" "$<TARGET_FILE_DIR:${UNIT_TEST_MODULE_DEMO}>/$<TARGET_FILE_BASE_NAME:${UNIT_TEST_MODULE_DEMO}>.hex"
-    COMMAND ${CMAKE_OBJCOPY} -O binary "$<TARGET_FILE:${UNIT_TEST_MODULE_DEMO}>" "$<TARGET_FILE_DIR:${UNIT_TEST_MODULE_DEMO}>/$<TARGET_FILE_BASE_NAME:${UNIT_TEST_MODULE_DEMO}>.bin"
-    COMMAND rm -rf ./build
-    COMMAND mkdir -p ${UNIT_TEST_MODULE_DEMO_BUILD_DIR}
-    COMMAND mv ${UNIT_TEST_MODULE_DEMO}.out ${UNIT_TEST_MODULE_DEMO_BUILD_DIR}
-    COMMAND mv ${UNIT_TEST_MODULE_DEMO}.bin ${UNIT_TEST_MODULE_DEMO_BUILD_DIR}
-    COMMAND mv ${UNIT_TEST_MODULE_DEMO}.hex ${UNIT_TEST_MODULE_DEMO_BUILD_DIR}
-    COMMAND mv ${UNIT_TEST_MODULE_DEMO}.s37 ${UNIT_TEST_MODULE_DEMO_BUILD_DIR}
+add_custom_target(${UNIT_TEST_CLEAN}
+                  COMMAND rm -rf ${CMAKE_BINARY_DIR}/test/unit_test/build/${BOARD_NAME}
+                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
 )
 
-set(post_build_command ${CMAKE_OBJDUMP} -t -h -d -S ${UNIT_TEST_MODULE_DEMO_BUILD_DIR}/${UNIT_TEST_MODULE_DEMO}.out > ${UNIT_TEST_MODULE_DEMO_BUILD_DIR}/${UNIT_TEST_MODULE_DEMO}.lst)
+include(unit_test)
 
-# Run post-build pipeline to perform additional post-processing
-if(post_build_command)
-add_custom_command(TARGET ${UNIT_TEST_MODULE_DEMO}
-    POST_BUILD
-    COMMAND ${post_build_command}
-)
-endif()
-
-if(${CORE_TYPE} MATCHES "cortex-m33")
-target_compile_options(unity PUBLIC
-    $<$<COMPILE_LANGUAGE:C>:-mcpu=${CORE_TYPE}>
-    $<$<COMPILE_LANGUAGE:C>:-mthumb>
-    $<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-sp-d16>
-    $<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>
-    $<$<COMPILE_LANGUAGE:C>:-Wall>
-    $<$<COMPILE_LANGUAGE:C>:-Wextra>
-    $<$<COMPILE_LANGUAGE:C>:-Os>)
-elseif(${CORE_TYPE} MATCHES "cortex-m4")
-target_compile_options(unity PUBLIC
-    $<$<COMPILE_LANGUAGE:C>:-mcpu=${CORE_TYPE}>
-    $<$<COMPILE_LANGUAGE:C>:-mthumb>
-    $<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>
-    $<$<COMPILE_LANGUAGE:C>:-mfloat-abi=softfp>
-    $<$<COMPILE_LANGUAGE:C>:-Wall>
-    $<$<COMPILE_LANGUAGE:C>:-Wextra>
-    $<$<COMPILE_LANGUAGE:C>:-Os>)
-endif()
+generate_unit_test(test/unit_test unit_test_iec60730_post sl_iec60730_post.c)
+generate_unit_test(test/unit_test unit_test_iec60730_bist sl_iec60730_bist.c)
+generate_unit_test(test/unit_test unit_test_iec60730_program_counter sl_iec60730_program_counter.c)
+generate_unit_test(test/unit_test unit_test_iec60730_safety_check sl_iec60730_bist.c)
+generate_unit_test(test/unit_test unit_test_iec60730_irq sl_iec60730_irq.c)
+generate_unit_test(test/unit_test unit_test_iec60730_system_clock sl_iec60730_system_clock.c)
+generate_unit_test(test/unit_test unit_test_iec60730_watchdog sl_iec60730_watchdog.c)
+generate_unit_test(test/unit_test unit_test_iec60730_cpu_registers sl_iec60730_cpu_registers)
+generate_unit_test(test/unit_test unit_test_iec60730_variable_memory sl_iec60730_variable_memory.c)
+generate_unit_test(test/unit_test unit_test_iec60730_invariable_memory sl_iec60730_invariable_memory.c)
