--- a/.github/workflows/manual_test.yml
+++ b/.github/workflows/manual_test.yml
@@ -60,6 +60,7 @@ jobs:
     if: github.event.inputs.test_mg12 == 'true'
     name: GCC-MG12 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
+    timeout-minutes: 30
     permissions:
       contents: read
       pull-requests: write
@@ -128,6 +129,7 @@ jobs:
     needs: [job1]
     name: GCC-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
+    timeout-minutes: 30
     permissions:
       contents: read
       pull-requests: write
@@ -197,6 +199,7 @@ jobs:
     needs: [job1, job2]
     name: IAR-MG12 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
+    timeout-minutes: 30
     permissions:
       contents: read
       pull-requests: write
@@ -266,6 +269,7 @@ jobs:
     needs: [job1, job2, job3]    
     name: IAR-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
+    timeout-minutes: 0
     permissions:
       contents: read
       pull-requests: write
