--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -10,6 +10,8 @@ jobs:
     name: Check coding convention
     runs-on: ubuntu-20.04
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4.1.7
     - name: Check working directory
       run: |
         pwd 
