--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -22,7 +22,7 @@ jobs:
         sudo apt install uncrustify clang-tidy cppcheck
     - name: Run test
       run: |
-        pre-commit run --files 
+        pre-commit run --all-files 
           
     
   
