--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -44,7 +44,7 @@ jobs:
         sudo apt install uncrustify clang-tidy cppcheck
     - name: Run test
       run: |
-        git diff --name-only develop $BRANCH_NAME | xargs pre-commit run --files 
+        git diff --name-only main update-source-code-lib-iec60730 | xargs pre-commit run --files 
           
     
   
