--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Run test
       run: |
         git fetch origin 
-        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionResult.log
+        git diff --name-only origin/develop  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionResult.log
     - name: Upload Result
       uses: actions/upload-artifact@v4.3.4
       with:
