--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -23,8 +23,9 @@ jobs:
         sudo apt install uncrustify clang-tidy cppcheck
     - name: Run test
       run: |
+        touch CodingConventionResult.log
         git fetch origin 
-        git diff --name-only origin/develop  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionResult.log
+        git diff --name-only origin/develop  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files 
     - name: Upload Result
       uses: actions/upload-artifact@v4.3.4
       with:
