--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -24,8 +24,9 @@ jobs:
     - name: Run test
       run: |
         git config diff.renameLimit 999999
+        touch CodingConventionResult.log
         git fetch origin 
-        git diff --name-only origin/iec_efr32  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionResult.log
+        git diff --name-only origin/iec_efr32  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files 
     - name: Upload Result
       uses: actions/upload-artifact@v4.3.4
       with:
