--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.7
+      with:
+        ref: update-source-code-lib-iec60730
     - name: Check working directory
       run: |
         pwd 
@@ -24,9 +26,8 @@ jobs:
     - name: Run test
       run: |
         git config diff.renameLimit 999999
-        touch CodingConventionResult.log
         git fetch origin 
-        git diff --name-only origin/iec_efr32  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files 
+        git diff --name-only origin/iec_efr32  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionResult.log
     - name: Upload Result
       uses: actions/upload-artifact@v4.3.4
       with:
