--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -21,13 +21,20 @@ jobs:
         ls -la
     - name: Set up environment
       run: |
+        ls -la
+        cp ./tools/.clang-format .
+        cp ./tools/.clang-tidy .
+        cp ./tools/.codespell/.codespellrc .
+        cp ./tools/.codespell/exclude-file.txt .
+        cp ./tools/.codespell/ignore-words.txt .
+        ls -la
         pip install pre-commit
         sudo apt install uncrustify clang-tidy cppcheck
     - name: Run test
       run: |
         git config diff.renameLimit 999999
         git fetch origin 
-        git diff --name-only origin/main  origin/iec_efr32 | xargs pre-commit run --files > CodingConventionResult.log
+        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files
     - name: Upload Result
       uses: actions/upload-artifact@v4.3.4
       with:
