--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -34,7 +34,7 @@ jobs:
       run: |
         git config diff.renameLimit 999999
         git fetch origin 
-        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files
+        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionResult.log
     - name: Upload Result
       uses: actions/upload-artifact@v4.3.4
       with:
